k8s/overlays/local/patch-api-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avatars-generator-api
spec:
  template:
    spec:
      containers:
        - name: api
          volumeMounts:
            - name: data-volume
              mountPath: /data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: api-data-pvc
