k8s/overlays/local/alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ExternalName
  externalName: avatars-generator-api.avatars-generator.svc.cluster.local
  ports:
    - port: 5000
