k8s/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avatars-generator-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: avatars-generator.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avatars-generator-web
            port:
              number: 8080
